# Harness-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/agent/: graph.py  state.py
app/api/: routes.py  schemas.py  webhooks.py
app/core/: config.py  container.py  logging.py  security.py
app/domain/: models.py
app/integrations/: feishu.py  llm.py  wecom.py
app/rag/: chunker.py  document_loader.py  embeddings.py  indexer.py  retriever.py  vector_store.py
app/storage/: conversations.py  idempotency.py  jobs.py
data/kb/: sample.md
deploy/nginx/: default.conf
scripts/: backup_postgres.ps1  init_db.ps1  reindex_kb.ps1
tests/: test_agent.py  test_chunker.py  test_retriever.py  test_webhooks.py
