[project]
name = "rag-agent-customer-service"
version = "0.1.0"
description = "LangGraph + FastAPI RAG agent for customer service over WeCom and Feishu."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langgraph>=0.2.60",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.10.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.0",
    "python-docx>=1.1.2",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

